--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             </p>
             <button type="button" class="btn2">Book a Service</button>
         </div>
-        <div>
-            <img src="./cbc-images/comment.png" height="100px" width="100px" alt="comment logo icon">
+        <div class="comment">
+            <img src="./cbc-images/comment.png" alt="comment logo icon">
         </div>
     </header>
 
