--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
     </header>
 
     <main>
-        <section>
-            <div>
+        <section class="cont2">
+            <div class="cont2-left">
                 <h2>
-                    Offering smart <span>software and web solution</span> built with the 
+                    Offering smart <span class="span3">software and web solution</span> built with the 
                     <span>top technology</span>
                 </h2>
             </div>
-            <div>
-                <div>
+            <div class="cont2-right">
+                <div class="website">
                     <img src="./cbc-images/ux.png" height="50px" width="50px" alt="desktop icon">
                     <p>
                         <h3>Website Development</h3>
@@ -55,7 +55,7 @@
                         </p>
                     </p>
                 </div>
-                <div>
+                <div class="software">
                     <img src="./cbc-images/coding.png" height="50px" width="50px" alt="coding icon">
                     <p>
                         <h3>Software Development</h3>
@@ -65,7 +65,7 @@
                         </p>
                     </p>
                 </div>
-                <div>
+                <div class="app">
                     <img src="./cbc-images/smartphone.png" height="50px" width="50px" alt="smartphone icon">
                     <p>
                         <h3>App Development</h3>
@@ -75,7 +75,7 @@
                         </p>
                     </p>
                 </div>
-                <div>
+                <div class="brand">
                     <img src="./cbc-images/promotion.png" height="50px" width="50px" alt="promotion icon">
                     <p>
                         <h3>Brand Promotion</h3>
