--- a/index.html
+++ b/index.html
@@ -46,60 +46,55 @@
             </div>
             <div class="cont2-right">
                 <div class="website">
-                    <img src="./cbc-images/ux.png" height="50px" width="50px" alt="desktop icon">
-                    <p>
+                    <img src="./cbc-images/ux.png" alt="desktop icon">
+                    <div>
                         <h3>Website Development</h3>
                         <p>
                             We take responsibility of your best online presence by
                             your unique website development methods.
                         </p>
-                    </p>
+                    </div>
                 </div>
                 <div class="software">
-                    <img src="./cbc-images/coding.png" height="50px" width="50px" alt="coding icon">
-                    <p>
+                    <img src="./cbc-images/coding.png" alt="coding icon">
+                    <div>
                         <h3>Software Development</h3>
                         <p>
                             We are master of our work. We know what solution best suits
                             your business for less efforts and max productivity.
                         </p>
-                    </p>
+                    </div>
                 </div>
                 <div class="app">
-                    <img src="./cbc-images/smartphone.png" height="50px" width="50px" alt="smartphone icon">
-                    <p>
+                    <img src="./cbc-images/smartphone.png" alt="smartphone icon">
+                    <div>
                         <h3>App Development</h3>
                         <p>
                             Our app development team is always commited to give you a quality
                             application for your business.
                         </p>
-                    </p>
+                    </div>
                 </div>
                 <div class="brand">
-                    <img src="./cbc-images/promotion.png" height="50px" width="50px" alt="promotion icon">
-                    <p>
+                    <img src="./cbc-images/promotion.png" alt="promotion icon">
+                    <div>
                         <h3>Brand Promotion</h3>
                         <p>
                             We design perfect marketing material for your email and make
                             sure of their inbox delivery.
                         </p>
-                    </p>
+                    </div>
                 </div>
             </div>
         </section>
 
-        <section>
-            <div>
-                <div>
+        <section class="cont3">
+            <div class="cont3-left">
+                <div class="cont3a">
                     <h3>Who are we?</h3>
                 </div>
-                <div>
-                    <h3>Why choose <span>pting</span></h3>
-                </div>
-            </div>
-            <div>
-                <div>
-                    <img src="./cbc-images/Vector.png" alt="pting icon"><span><b>Pting</b></span>
+                <div class="cont3b">
+                    <img src="./cbc-images/Vector.png" alt="pting icon"><span class="span4"><b>pting</b></span>
                     <p>
                         Pting is an IT start up having its head office in Lucknow.
                         We are specialized in Website Developmen, Android Application Development
@@ -107,15 +102,28 @@
                         service to our valuable clients.
                     </p>
                 </div>
-                <div>
-                    <img src="./cbc-images/shield.png" height="50px" width="50px" alt="shield icon">
-                    <span>A perfect support system for every little niche</span> <br>
-                    <img src="./cbc-images/social-media.png" height="50px" width="50px" alt="social icon">
-                    <span>We deliver SEO Ranking On Web Marketing</span> <br>
-                    <img src="./cbc-images/budget.png" height="50px" width="50px" alt="budget icon">
-                    <span>Just in your budget</span> <br>
-                    <img src="./cbc-images/customer-service.png" height="50px" width="50px" alt="customer-service icon">
+            </div>
+            <div class="cont3-right">
+                <div class="cont3c">
+                    <h3>Why choose <span>pting</span></h3>
+                </div>
+                <div class="cont3d">
+                    <div>
+                        <img src="./cbc-images/shield.png" height="50px" width="50px" alt="shield icon">
+                        <span>A perfect support system for every little niche</span> <br>
+                    </div>
+                    <div>
+                        <img src="./cbc-images/social-media.png" height="50px" width="50px" alt="social icon">
+                        <span>We deliver SEO Ranking On Web Marketing</span> <br>
+                    </div>
+                    <div>
+                        <img src="./cbc-images/budget.png" height="50px" width="50px" alt="budget icon">
+                        <span>Just in your budget</span> <br>
+                    </div>
+                    <div>
+                        <img src="./cbc-images/customer-service.png" height="50px" width="50px" alt="customer-service icon">
                     <span>Proper and high customer engagement</span>
+                    </div>
                 </div>
             </div>
         </section>
