--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </div>
                 <div class="cont3b">
                     <img src="./cbc-images/Vector.png" alt="pting icon"><span class="span4"><b>pting</b></span>
-                    <p>
+                    <p class="pting-p">
                         Pting is an IT start up having its head office in Lucknow.
                         We are specialized in Website Developmen, Android Application Development
                         and Search Engine Optimization. Our primary objective is to provide quality 
@@ -105,22 +105,22 @@
             </div>
             <div class="cont3-right">
                 <div class="cont3c">
-                    <h3>Why choose <span>pting</span></h3>
+                    <h3>Why choose <span class="span5">pting?</span></h3>
                 </div>
                 <div class="cont3d">
-                    <div>
+                    <div class="cont3d-img">
                         <img src="./cbc-images/shield.png" height="50px" width="50px" alt="shield icon">
                         <span>A perfect support system for every little niche</span> <br>
                     </div>
-                    <div>
+                    <div class="cont3d-img">
                         <img src="./cbc-images/social-media.png" height="50px" width="50px" alt="social icon">
                         <span>We deliver SEO Ranking On Web Marketing</span> <br>
                     </div>
-                    <div>
+                    <div class="cont3d-img">
                         <img src="./cbc-images/budget.png" height="50px" width="50px" alt="budget icon">
                         <span>Just in your budget</span> <br>
                     </div>
-                    <div>
+                    <div class="cont3d-img">
                         <img src="./cbc-images/customer-service.png" height="50px" width="50px" alt="customer-service icon">
                     <span>Proper and high customer engagement</span>
                     </div>
