--- a/index.html
+++ b/index.html
@@ -109,44 +109,46 @@
                 </div>
                 <div class="cont3d">
                     <div class="cont3d-img">
-                        <img src="./cbc-images/shield.png" height="50px" width="50px" alt="shield icon">
+                        <img src="./cbc-images/shield.png" alt="shield icon">
                         <span>A perfect support system for every little niche</span> <br>
                     </div>
                     <div class="cont3d-img">
-                        <img src="./cbc-images/social-media.png" height="50px" width="50px" alt="social icon">
+                        <img src="./cbc-images/social-media.png" alt="social icon">
                         <span>We deliver SEO Ranking On Web Marketing</span> <br>
                     </div>
                     <div class="cont3d-img">
-                        <img src="./cbc-images/budget.png" height="50px" width="50px" alt="budget icon">
+                        <img src="./cbc-images/budget.png" alt="budget icon">
                         <span>Just in your budget</span> <br>
                     </div>
                     <div class="cont3d-img">
-                        <img src="./cbc-images/customer-service.png" height="50px" width="50px" alt="customer-service icon">
+                        <img src="./cbc-images/customer-service.png" alt="customer-service icon">
                     <span>Proper and high customer engagement</span>
                     </div>
                 </div>
             </div>
         </section>
     </main>
-    <footer style="margin-top: 20px;">
-        <div>
-            <img src="./cbc-images/Vector.png" alt="Pting icon"> <span><b>Pting</b></span>
-        </div>
-        <div>
-            <h4>Contact Us</h4>
-            <ul>
-                <li>hello@pting.com</li>
-                <li>79223-2890-21911</li>
-                <li>Monday - Saturday, 10AM - 7PM</li>
-            </ul>
-        </div>
-        <div>
-            <h4>F.A.Q</h4>
-            <ul>
-                <li>What type of team does pting have?</li>
-                <li>What type of technology does pting handle?</li>
-                <li>How can i purchase from pting?</li>
-            </ul>
+    <footer>
+        <div class="footer-div">
+            <div class="img-footer">
+                <img src="./cbc-images/Vector.png" alt="Pting icon"> <span><b>Pting</b></span>
+            </div>
+            <div class="footer-list1">
+                <h4>Contact Us</h4>
+                <ul>
+                    <li>hello@pting.com</li>
+                    <li>79223-2890-21911</li>
+                    <li>Monday - Saturday, 10AM - 7PM</li>
+                </ul>
+            </div>
+            <div class="footer-list2">
+                <h4>F.A.Q</h4>
+                <ul>
+                    <li>What type of team does pting have?</li>
+                    <li>What type of technology does pting handle?</li>
+                    <li>How can i purchase from pting?</li>
+                </ul>
+            </div>
         </div>
         <hr>
         <p>2021 - All rights Reserved. PTING CONSULTANCY SERVICES </p>
