--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <img src="./cbc-images/Vector.png" alt="pting icon"><span class="span4"><b>pting</b></span>
                     <p class="pting-p">
                         Pting is an IT start up having its head office in Lucknow.
-                        We are specialized in Website Developmen, Android Application Development
+                        We are specialized in Website Development, Android Application Development
                         and Search Engine Optimization. Our primary objective is to provide quality 
                         service to our valuable clients.
                     </p>
@@ -106,6 +106,9 @@
             <div class="cont3-right">
                 <div class="cont3c">
                     <h3>Why choose <span class="span5">pting?</span></h3>
+                    <p>
+                        We are on a mission to build, grow and maintain loyal communities at every touchpoint.
+                    </p>
                 </div>
                 <div class="cont3d">
                     <div class="cont3d-img">
